--- a/src/Argument/Argument.csproj
+++ b/src/Argument/Argument.csproj
@@ -22,6 +22,9 @@
         <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.6.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="System.Text.RegularExpressions">
+          <Version>4.3.1</Version>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.6.0">
