--- a/test/Argument.Tests/Argument.Tests.csproj
+++ b/test/Argument.Tests/Argument.Tests.csproj
@@ -18,7 +18,10 @@
         <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.6.0" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
         <PackageReference Include="xunit" Version="2.3.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\src\Argument\Argument.csproj" />
